# digital-budget-optimisation-engine

./: CITATION.cff  LICENSE.txt  README (1).md  README (2).md  README.md  app.py  conftest.py  module1.py  module2.py  module3.py  module4.py  module5.py  module6.py  pyproject.toml  requirements.txt  wizard_state.py
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
core/: csv_import.py  kpi_config.py  wizard_state.py
docs/: CALIBRATION.md  DECISION_LOGIC.md  MODULES.md  SCENARIOS.md
examples/benchmark/: run_benchmark.py
examples/case_study/: SCENARIO.md  campaign_data.xlsx  run_case_study.py  run_data_sensitivity.py  run_montecarlo_stability.py  run_parameter_sensitivity.py
examples/minimal_examples/: run_balanced_example.py  run_concentrated_example.py
modules/: module1.py  module2.py  module3.py  module4.py  module5.py  module6.py  module7.py
src/: app.py
src/claro_engine/: __init__.py
src/claro_engine/core/: kpi_config.py
src/core/: kpi_config.py
src/modules/: module4.py  module6.py  module7.py
test_datasets/: README.md  _generate.py  _run_scenarios.py  _verify_lp.py
test_datasets/01_b2b_saas_leadgen/: SCENARIO.md  fb.csv  go_search.csv  li.csv
tests/: behavioural_check.py  conftest.py  edge_cases.py  smoke_test.py  test_accuracy.py  test_behavioural_invariants.py  test_bug_fixes.py  test_bug_fixes_20260526.py  test_diagnostic_index_label.py  test_edge_cases.py  test_examples_reproduce.py  test_module5_optimisation.py  test_module6_forecast.py  test_module7_insight.py  test_plan_b_feasibility.py
wiki/: index  wiki.html
(+36 files in other folders)
